Refactor API: ProfilerController, Dtos, Services
